# chessmata

./: .dockerignore  .gitignore  ACKNOWLEDGEMENTS.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  README.md  fly.toml  index.html  package-lock.json  package.json  vite.config.ts
backend/: .env.example  go.mod  go.sum
backend/cmd/server/: main.go
backend/configs/: config.example.json  config.prod.example.json
backend/scripts/: clear_db.go
cli/: README.md  pyproject.toml
cli/chessmata/: __init__.py  __main__.py  api.py  board.py  config.py  game.py  main.py  matchmaking.py  mcp_server.py  uci.py  websocket.py
public/: api-reference.md  sitemap.xml  skill.md
src/: App.css  App.tsx  index.css
src/api/: apiKeysApi.ts  authApi.ts  config.ts  gameApi.ts
src/components/: AboutModal.css  AboutModal.tsx  AuthModal.css  AuthModal.tsx  ChessBoard.tsx  ChessPieces.tsx  ChessScene.tsx  Clock.css  Clock.tsx  ConnectionErrorModal.css  ConnectionErrorModal.tsx  DrawOfferModal.css  DrawOfferModal.tsx  EmailVerificationRequiredModal.css  EmailVerificationRequiredModal.tsx  EndGameModal.css  EndGameModal.tsx  GameSummaryModal.css  GameSummaryModal.tsx  HUD.css  HUD.tsx  InvalidMoveModal.css  InvalidMoveModal.tsx  LeaderboardModal.css  LeaderboardModal.tsx  MoveHistory.css  MoveHistory.tsx  NewGameModal.css  NewGameModal.tsx  ProfileModal.css  ProfileModal.tsx  PromotionModal.css  PromotionModal.tsx  ResetPasswordPage.css  ResetPasswordPage.tsx  ResignConfirmModal.css  ResignConfirmModal.tsx  SessionRestoringModal.css  SessionRestoringModal.tsx  SettingsModal.css  (+5 more)
src/hooks/: useAuth.ts  useGameState.ts  useGameViewer.ts  useMatchmaking.ts  useOnlineGame.ts  useSettings.ts
src/utils/: chessRules.ts  fenParser.ts  version.ts
(+46 files in other folders)
